
        56) PR #439 and Issue #438. Instruct pip to install the version of
        pytest prior to 5.0 (as changes to the structure of the exception
        object break a lot of our tests).

        57) PR #420 for #418. Moves the C/OpenCL generation functionality out
        of the Node class and implements it as PSyIR backends using the
        Visitor Pattern.

release 1.7.0 20th December 2018

	1) #172 and PR #173 Add support for logical declaration, the save
	attribute and initialisation in f2pygen (required for the OpenACC
	transformation)

        2) #137 Add support for Python 3. Travis now runs the test suite
	for both Python 2 and Python 3.

        3) #159 and PR #165. Adds a configuration option for the Dynamo
	0.3 API to turn on (redundant) computation over annexed dofs in
	order to reduce the number of halo exchanges required.

	4) #119 and PR #171. Adds support for inserting profiling/
	monitoring into a Schedule.

	5) #179 and PR #183. Bug fix in CompileError constructor to run
	tests under Python 3.

	6) #121 and PR #166. Adds a user editable configuration file.

	7) #181 and PR #182. Adds support for generating declarations of
	character variables and for the target attribute.

	8) #170 and PR #177. Adds OpenACC transformations for use with the
	GOcean1.0 API. Appropriate Kernel transformations need to be added
	for full automated OpenACC code parallelisation.

	9) #164 and PR #184. Updates documentation to refer to psyclone
	script instead of generator.py.

        10) PR #187. Add example transformation scripts for the Dynamo
        0.3 API.

	11) PR #180. Makes the specification of loop limits in the GOcean
	API more flexible. This will enable us to support single-iteration
	loops.

        12) #188 and PR #189. Bug fix to ensure that the name of profiling
        regions remains the same when gen() is called multiple times.

        13) #176 and PR #200. Introduce new RegionTrans base class and