@@ -184,6 +184,9 @@
         of the Node class and implements it as PSyIR backends using the
         Visitor Pattern.
 
+	58) PR #434 for #354. Add support for translating ranges in
+	Fortran case statements into PSyIR.
+
 release 1.7.0 20th December 2018
 
 	1) #172 and PR #173 Add support for logical declaration, the save
